<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/crv_customer">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:id="@+id/txv_customer"
            android:textSize="15pt"
            android:text="@string/name"
            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_delete"
            android:layout_below="@+id/btn_edit"
            android:layout_alignParentEnd="true"
            android:src="@android:drawable/ic_menu_delete"
            />
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/txv_methodname"
            android:layout_below="@+id/txv_customer"
            android:text="@string/method"
            android:textSize="10pt"

            />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/txv_date"
            android:layout_below="@+id/txv_methodname"
            android:text="@string/date"
            android:textSize="10pt" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_edit"
            android:src="@android:drawable/ic_menu_edit"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>


</android.support.v7.widget.CardView>